# wat

./: .gitignore  LICENSE
src/: CMakeLists.txt  README.md  whathappened_vc2017.sln  whathappened_vc9_cpp98.sln
src/whathappened/: CMakeLists.txt  main.cpp  whathappened.vcproj  whathappened.vcxproj
src/whathappened_lib/: CMakeLists.txt  readme.txt  wat_analyzer.cpp  wat_analyzer.h  wat_base.h  wat_config.h  wat_data_analyzer.cpp  wat_data_analyzer.h  wat_event_cache.cpp  wat_event_cache.h  wat_hub.cpp  wat_hub.h  wat_internal_base.h  wat_internal_base_apple.cpp  wat_internal_base_boost.cpp  wat_internal_base_linux.cpp  wat_lib.cpp  wat_lib.h  wat_list_and_locks.h  wat_log.cpp  wat_log.h  wat_platform.h  wat_platform_gcc.h  wat_platform_win32.h  wat_public_event_impl.inc  wat_reporter.cpp  wat_reporter.h  wat_std.h  wat_strings.h  wat_utils.cpp  wat_utils.h  wat_warns_off.h  whathappened_lib.vcproj  whathappened_lib.vcxproj  whathappened_lib.vcxproj.filters
